sending data from views to controller using Get method.

--- a/BlogWebsite/Views/Home/Index.cshtml
+++ b/BlogWebsite/Views/Home/Index.cshtml
@@ -4,3 +4,16 @@
 <h2>This is the .NETT 6 with C# and MVC Series. . .</h2>
 
 <button class="btn btn-primary">Primary Button</button>
+
+<br />
+<br />
+
+<form method="get" asp-controller="Home" asp-action="Welcome">
+
+    <input type="text" name="Name" placeholder="Enter Name" />
+    <br />
+    <input type="text" name="FName" placeholder="Enter Father Name" />
+    <br />
+    <button type="submit">Send Data</button>
+
+</form>
