--- a/BlogWebsite/Views/Home/Index.cshtml
+++ b/BlogWebsite/Views/Home/Index.cshtml
@@ -1,19 +1,29 @@
 ﻿
 <h1>Welcome To The Software Engineering Channel</h1>
 <br />
-<h2>This is the .NETT 6 with C# and MVC Series. . .</h2>
-
-<button class="btn btn-primary">Primary Button</button>
+<h2>This is the .NET 6 with C# and MVC Series. . .</h2>
 
 <br />
 <br />
 
-<form method="get" asp-controller="Home" asp-action="Welcome">
+@* <form method="get" asp-controller="Home" asp-action="Welcome">
 
     <input type="text" name="Name" placeholder="Enter Name" />
     <br />
     <input type="text" name="FName" placeholder="Enter Father Name" />
     <br />
     <button type="submit">Send Data</button>
+
+</form> *@
+
+<form method="post" asp-controller="Home" asp-action="MyData">
+
+    <input type="text" name="Name" placeholder="Enter Name" />
+    <br />
+    <br />
+    <input type="text" name="FName" placeholder="Enter Father Name" />
+    <br />
+    <br />
+    <button type="submit" class="btn btn-primary">Send Data</button>
 
 </form>
